# Hybrid-retrieval-fusion-text-classifier

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/tasks/: INDEX.md  T01-test-harness.md  T02-domain-unit-tests.md  T03-feature-assembly-tests.md  T04-retrieval-tests.md  T05-fusion-calibration-tests.md  T06-leakage-regression-test.md  T07-e2e-and-persistence.md  T08-documentation.md  T20-input-validation.md  T21-deterministic-hashing-encoder.md  T22-edge-cases.md  T23-pluggable-component-registry.md  T24-pluggable-encoder-backends.md  T25-cli-encoder-kind-flag.md  T26-seed-fusion-backends.md  T27-config-validation.md  T28-encode-kwargs-asymmetric.md  T29-plugin-discovery.md  T30-vectorize-inference-predict.md  T31-faiss-dense-retriever.md  T32-bm25-memory-profile.md  T33-cross-encoder-reranker-signal.md  T34-pluggable-retrieval-signals.md  T35-language-neutral-bm25-defaults.md  T41-lightgbm-fusion.md  T42-alt-calibrators-platt-beta.md  T44-xgbranker-fusion.md  T45-per-class-calibration.md  T50-pin-dependencies.md  T51-lint-types-precommit.md  T52-quality-regression-benchmark.md  T63-torch-optional-install.md  T64-release-and-project-hygiene.md  T65-topk-predictions.md  T66-retune-thresholds-cli.md  T67-pickle-free-artifacts.md  T68-taxonomy-update-without-retrain.md  T69-prediction-explanations.md  T70-custom-fusion-features.md  (+6 more)
.claude/tasks/done/: T04-retrieval-tests.md  T05-fusion-calibration-tests.md  T06-leakage-regression-test.md  T07-e2e-and-persistence.md  T20-input-validation.md  T21-deterministic-hashing-encoder.md  T22-edge-cases.md  T23-pluggable-component-registry.md  T24-pluggable-encoder-backends.md  T25-cli-encoder-kind-flag.md  T26-seed-fusion-backends.md  T27-config-validation.md  T30-vectorize-inference-predict.md  T41-lightgbm-fusion.md  T42-alt-calibrators-platt-beta.md  T44-xgbranker-fusion.md  T50-pin-dependencies.md  T51-lint-types-precommit.md  T52-quality-regression-benchmark.md  T60-installable-distribution.md  T61-evaluation-and-reporting.md  T62-version-provenance.md
.github/workflows/: ci.yml  lockfile.yml
examples/clinc150/: .gitignore  README.md  check_oos.py  clinc150_abstention_demo.ipynb  prepare.py
examples/coicop_hebrew/: .gitignore  README.md  coicop_hebrew_classification.ipynb  hebrew_retail_full_pipeline_colab.ipynb  items.csv  prepare.py
scripts/: demo.py  infer.py  train.py
tests/: _doubles.py  conftest.py  test_imports.py
tests/integration/: test_cli.py  test_e2e.py  test_edge_cases.py  test_evaluate_cli.py  test_leakage.py
tests/quality/: test_benchmark.py
tests/unit/: test_calibration.py  test_domain.py  test_doubles.py  test_edge_cases.py  test_encoder_tfidf.py  test_evaluation.py  test_features.py  test_fusion.py  test_fusion_lightgbm.py  test_fusion_xgbranker.py  test_registry.py  test_retrieval.py  test_validation.py
text_classifier/: __init__.py  _version.py  config.py  datasets.py
text_classifier/application/: __init__.py  evaluation.py  features.py  inference.py  scoring.py  training.py
text_classifier/cli/: __init__.py  _common.py  evaluate.py  infer.py  train.py
text_classifier/domain/: __init__.py  models.py  ports.py  services.py
text_classifier/infrastructure/: __init__.py  encoder.py  fusion.py  persistence.py  registry.py  retrieval.py
