[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "text-classifier"
version = "0.1.0"
description = "Hybrid retrieval-fusion text classifier with calibrated abstention"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "xgboost",
    "sentence-transformers",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
# Optional alternative fusion backend (FusionConfig.kind="lightgbm"). Not a hard
# dependency: air-gapped hosts may not have it, and the suite skips its tests when
# it is absent.
lightgbm = ["lightgbm"]

# Flat layout: pick up the package, leave scripts/ as runnable entry points.
[tool.setuptools.packages.find]
include = ["text_classifier*"]
