[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "text-classifier"
version = "0.1.0"
description = "Hybrid retrieval-fusion text classifier with calibrated abstention"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    # Lower bounds only: these are conservative floors for the APIs the package
    # uses. For air-gapped reproducibility, pin exact versions in a lockfile /
    # constraints file (see requirements.txt) for your deployment.
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "xgboost>=1.7",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
# Lint + type tooling (T51); versions match .pre-commit-config.yaml / CI.
dev = ["ruff==0.15.8", "mypy==1.19.1", "pre-commit"]
# Optional alternative fusion backend (FusionConfig.kind="lightgbm"). Not a hard
# dependency: air-gapped hosts may not have it, and the suite skips its tests when
# it is absent.
lightgbm = ["lightgbm"]

[project.scripts]
text-classifier-train = "text_classifier.cli.train:main"
text-classifier-infer = "text_classifier.cli.infer:main"
text-classifier-eval = "text_classifier.cli.evaluate:main"

# Flat layout: pick up the package, leave scripts/ as runnable dev wrappers.
[tool.setuptools.packages.find]
include = ["text_classifier*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream consumers get the package's type hints.
text_classifier = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "quality: quality-regression benchmark (metric floors); CI runs these in a dedicated job",
]

[tool.ruff]
# Matches the codebase's established style; ruff's default rule set (E4/E7/E9/F)
# keeps the gate about correctness, not taste.
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

# The ML backends ship no type stubs; silence only the import errors, not the
# checking of our own code that uses them.
[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "lightgbm.*",
    "sentence_transformers.*",
    "sklearn.*",
    "scipy.*",
    "joblib.*",
    "pandas.*",
]
ignore_missing_imports = true
